# template-kaggle-code

./: .mise.toml  pyproject.toml
codes/: dataset-metadata.json
sub/: a-sub.ipynb  kernel-metadata.json
