[project]
name = "a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "lightning>=2.4.0",
    "pandas>=2.2.3",
    "polars>=1.14.0",
    "pyarrow>=18.1.0",
    "torch==2.5.1+cu118",
    "torchvision==0.20.1+cu118",
]

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu118/torch",
    "https://download.pytorch.org/whl/cu118/torchvision",
]
